retrieveUnpackaged/objects/NonStandardSITsRequest__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <description>Requested Non Standard Software</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>NonStandardSoftwareRequests</relationshipLabel>
        <relationshipName>NonStandardSoftwareRequests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameOfUser__c</fullName>
        <label>Name of User</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product&apos;s full name</description>
        <label>Product Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Hardware__c</fullName>
        <description>SELECT ONE</description>
        <label>Software/Hardware</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPA-Owned Hardware/Software</fullName>
                </value>
                <value>
                    <fullName>Privately-Owned Commercial Hardware or Software</fullName>
                </value>
                <value>
                    <fullName>Shareware, Freeware or Public Domain Sotware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workstation__c</fullName>
        <label>Workstation</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Non Standard Software Request</label>
    <listViews>
        <fullName>Adobe_Cloud</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Adobe Cloud</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00000}</displayFormat>
        <label>Request Registratoin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Standard Software Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>